# libra

./: .gitignore  .gitmodules  CMakeLists.txt
.gitlab/: ubuntu.yml
include/Backbone/: Expected
include/Libra/: Global  Platform  WinAPI  Windows
src/c++/cli/: commandlineparser.c++  commandlineparser.h
src/c++/core/: cmake_defs.h  expected.h  global.h  qtaliases_p.h
src/c++/logging/: logging.h  scope_macro.h
src/c++/platform/: arch_detection.h  arch_detection_p.h  compiler_detection.h  compiler_detection_p.h  endian_detection.h  endian_detection_p.h  language_detection.h  language_detection_p.h  os_detection.h  os_detection_p.h  platform.h  winapi_wrapper.h  windows_header.h  word_detection.h  word_detection_p.h
